Sat Mar 19 13:13:13 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/NodeApplicationManager/ImplementationInfo.cpp:
        * DAnCE/NodeApplicationManager/ImplementationInfo.h:
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h:

          Changes to reflect the infrasrtuctural changes related
          to providing capability in the NodeApplication
          to support multiple containers.

          Thanks to Gan Deng <dengg@dre.vanderbilt.edu> for
          architecting and implementing this project.

Sat Mar 19 13:08:18 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/ciao/NodeApplication_Impl.inl:

          Made some changes to fix compiler errors.

Sat Mar 19 12:48:44 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/ciao/CCM_Core.mpc:
        * DAnCE/ciao/CIAO_Config.h:
        * DAnCE/ciao/Container_Base.cpp:
        * DAnCE/ciao/Container_Base.h:
        * DAnCE/ciao/Container_Impl.cpp:
        * DAnCE/ciao/Container_Impl.h:
        * DAnCE/ciao/Container_Impl.inl:
        * DAnCE/ciao/Context_Impl_T.cpp:
        * DAnCE/ciao/Deployment.idl:
        * DAnCE/ciao/Deployment_Core.idl:
        * DAnCE/ciao/Dynamic_Component_Activator.cpp:
        * DAnCE/ciao/Dynamic_Component_Activator.h:
        * DAnCE/ciao/Dynamic_Component_Servant_Base.cpp:
        * DAnCE/ciao/Dynamic_Component_Servant_Base.h:
        * DAnCE/ciao/Dynamic_Component_Servant_T.cpp:
        * DAnCE/ciao/Dynamic_Component_Servant_T.h:
        * DAnCE/ciao/Home_Servant_Impl_Base.h:
        * DAnCE/ciao/Home_Servant_Impl_T.cpp:
        * DAnCE/ciao/Home_Servant_Impl_T.h:
        * DAnCE/ciao/NodeApplication_Impl.cpp:
        * DAnCE/ciao/NodeApplication_Impl.h:
        * DAnCE/ciao/NodeApplication_Impl.inl:
        * DAnCE/ciao/Object_Set_T.cpp:
        * DAnCE/ciao/Object_Set_T.h:
        * DAnCE/ciao/Object_Set_T.inl:
        * DAnCE/ciao/Port_Activator_T.cpp: